[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/asteroid.png" type="Texture" id=1]
[ext_resource path="res://addons/Combat_Area/CombatArea2D.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Asteroid.gd" type="Script" id=3]
[ext_resource path="res://Assets/MusicAndSounds/asterip.wav" type="AudioStream" id=4]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.619469, 0.982301 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.72549, 0, 0, 0, 0 )

[sub_resource type="CircleShape2D" id=1]
radius = 28.0

[node name="Asteroid" type="Node2D"]
script = ExtResource( 3 )

[node name="ExplodeParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
one_shot = true
speed_scale = 8.11
explosiveness = 0.38
randomness = 0.12
lifetime_randomness = 0.24
local_coords = false
emission_shape = 1
emission_sphere_radius = 45.56
gravity = Vector2( 0, 0 )
angular_velocity = 170.67
scale_amount = 23.22
color_ramp = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DamageHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
area_type = "Damage"
damage = 1.0
potency = 1
team = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHitbox"]
modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
active = false
area_type = "Body"
team = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 1, 1, 0 )
shape = SubResource( 1 )

[node name="DieTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 17.5, 0 )
scale = Vector2( 4.05, 1 )

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[connection signal="damage_signal" from="Hitbox" to="." method="_on_Hitbox_damage_signal"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
